[package]
name = "uns-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Envelope-aware UNS relay between a device-local bus and the site UNS broker: uplinks the six ggcommons UNS classes topic-verbatim, downlinks own-device commands, with hop-tag loop protection. One uns-bridge per device bus."
publish = false

# The uns-bridge component (DESIGN-uns §9 / DESIGN-uns-bridge in the ggcommons monorepo).
# The site broker is the bridge's EXTERNAL SYSTEM (like an adapter's OPC UA endpoints): the
# bridge builds its site connection by reusing the ggcommons core's already-pub MQTT objects
# (`MqttProvider::connect`) from its own `component.instances[]` config — ZERO core change.

[[bin]]
name = "uns-bridge"
path = "src/main.rs"

[features]
# HOST / KUBERNETES-boundary binary: dual raw MQTT (device bus + site broker). This is the
# P3-2 target pair (MQTT <-> MQTT).
default = ["standalone"]
standalone = ["ggcommons/standalone"]
# GREENGRASS variant (PRIMARY = Nucleus IPC, SITE = MQTT): the ggcommons IPC provider is a
# Linux-only C-FFI build. The IPC-primary wiring in this component is a documented follow-up
# (see README "Roadmap"); enabling this feature today only compiles the library's IPC provider.
greengrass = ["ggcommons/greengrass"]

[dependencies]
# The ggcommons Rust library (git-rev pinned — the telemetry-processor pattern; CI resolves
# this rev, LOCAL DEV builds against the sibling checkout via the gitignored
# .cargo/config.toml `[patch]` override and never touches this pin).
#
# The pin below is the UNS core on the remote `main`: rev b1d8d85 is the v0.2.0 UNS release
# (`chore(release): bump ggcommons libs 0.1.1 -> 0.2.0 (UNS release)`), which carries the
# grammar / top-level identity / `gg.uns()` / reserved-guard / `request()`-deadline / LWT
# surface plus the `_bcast` republish listener this bridge relies on. A pure git-rev build
# compiles against it; the gitignored `.cargo/config.toml` `[patch]` override is only for
# local dev against uncommitted sibling-lib changes.
ggcommons = { git = "https://github.com/edgecommons/ggcommons.git", rev = "b1d8d85bed1e989928d083323ef8be98132d77d5", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# (tracing-subscriber removed in P3-4b: the GgCommons runtime owns logging init,
# from the config's `logging` section.)
anyhow = "1"

[dev-dependencies]
# For the in-memory fake `MessagingProvider` the relay-pump tests wire as device + site bus.
async-trait = "0.1"
