[package]
name = "uns-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "BUSL-1.1"
description = "Envelope-aware UNS relay between a device-local bus and the site UNS broker: uplinks the six edgecommons UNS classes topic-verbatim, downlinks own-device commands, with hop-tag loop protection. One uns-bridge per device bus."
publish = false

# The uns-bridge component (DESIGN-uns §9 / DESIGN-uns-bridge in the edgecommons monorepo).
# The site broker is the bridge's EXTERNAL SYSTEM (like an adapter's OPC UA endpoints): the
# bridge builds its site connection by reusing the edgecommons core's already-pub MQTT objects
# (`MqttProvider::connect_with_last_will`) from its own `component.instances[]` config. The relay's
# device-bus PRIMARY is the runtime's OWN raw provider (`gg.raw_device_provider()` — core #58),
# shared below the reserved-class guard: IPC on GREENGRASS, MQTT on HOST, one client either way.

[[bin]]
name = "uns-bridge"
path = "src/main.rs"

[features]
# HOST / KUBERNETES-boundary binary: device bus + site broker both MQTT (the P3-2 pair). The
# `standalone` feature gates the edgecommons `mqtt` provider module (`MqttProvider`), which the
# SITE connection ALWAYS uses — on every platform — so it is the base every build needs.
default = ["standalone"]
standalone = ["edgecommons/standalone"]
# GREENGRASS variant (device bus = Nucleus IPC, site = MQTT). It BUILDS ON `standalone`: the
# SITE half is still MQTT (`MqttProvider::connect_with_last_will`), so the mqtt provider must be
# compiled in alongside the IPC provider. `edgecommons/greengrass` adds the Linux-only C-FFI IPC
# provider that the runtime resolves as the shared device-bus PRIMARY. Build/link it on Linux/WSL.
greengrass = ["standalone", "edgecommons/greengrass"]

[dependencies]
# The edgecommons Rust library (git-rev pinned — the telemetry-processor pattern; CI resolves
# this rev, LOCAL DEV builds against the sibling checkout via the gitignored
# .cargo/config.toml `[patch]` override and never touches this pin).
#
# The pin below carries the raw-device-provider affordance (`EdgeCommons::raw_device_provider()` /
# `DefaultMessagingService::provider()`, core PR #58) that the relay's shared-PRIMARY wiring needs,
# on top of the grammar / top-level identity / `gg.uns()` / reserved-guard / `request()`-deadline /
# LWT surface plus the `_bcast` republish listener this bridge relies on. A pure git-rev build
# compiles against it; the gitignored `.cargo/config.toml` `[patch]` override is only for local dev
# against the sibling-lib checkout (point it at wherever the affordance code lives locally).
edgecommons = { git = "https://github.com/edgecommons/edgecommons.git", rev = "6d836fe917cf21c1930daaaab087c06f2a71adfb", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# (tracing-subscriber removed in P3-4b: the EdgeCommons runtime owns logging init,
# from the config's `logging` section.)
anyhow = "1"

[dev-dependencies]
# For the in-memory fake `MessagingProvider` the relay-pump tests wire as device + site bus.
async-trait = "0.1"
